--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,16 @@
 *{
     font-family: "Inter", sans-serif;
 }
+
+.gear{
+    animation: gear 4s infinite linear ;
+}
+
+@keyframes gear {
+   0%{
+    transform: rotate(0deg);
+   }
+   100%{
+    transform: rotate(360deg);
+   }
+}
