--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-*{
+* {
     font-family: "Inter", sans-serif;
 }
 
-.gear{
-    animation: gear 4s infinite linear ;
+.gear {
+    animation: gear 4s infinite linear;
 }
 
 @keyframes gear {
-   0%{
-    transform: rotate(0deg);
-   }
-   100%{
-    transform: rotate(360deg);
-   }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.marquee {
+    animation: scroll 20s linear infinite forwards;
+}
+
+@keyframes scroll {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(-150%);
+    }
 }
